# GridLock

./: .gcovr.cfg  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  agent.md  build_log.txt  config.toml  docker-compose.yml  e2eTestOutput.txt  gdb_script.txt  gridlock_config.toml  meson.build  patch_mocks.py  scratch.cpp  scratch2.cpp  scratch3.cpp  scratch4.cpp  scratch5  scratch5.cpp  scratch_isolated.cpp  scratch_test.cpp
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
.gridlock/: settings.toml  workspace.toml
data/: gridlock.desktop
docker/: Dockerfile.dev
docs/: README.md  advanced_features.bml  advanced_features.md  keybindings.md
docs/architecture/: dap_coordinator.md
docs/developer/: README.md  architecture_core.md  environment_setup.md  testing_and_ci.md  ui_internals.md
docs/developer/core/: hpc_and_memory.md  managers_and_models.md
docs/developer/testing/: test_harness.md
docs/developer/ui/: views_and_docks.md  widgets_and_dialogs.md
docs/hpc_integration/: slurm_and_spack.md
docs/user/: README.md  advanced_debugging.md  hpc_workflows.md  interface_guide.md
docs/user_guide/: configuration.md  interface_workflows.md
packaging/: gridlock.desktop
resources/: gridlock.qrc  styles.qrc
scratch/: dap_test.json  deadlock_demo_demo  inspection_demo_demo  test_mpi  test_mpi.c
scripts/: build_appimage.sh  build_local.sh  run_coverage.sh  uninstall_local.sh
src/: GdbRankCoordinator.cpp  GdbRankCoordinator.hpp  GridLockApp.cpp  GridLockApp.hpp  RankState.hpp  main.cpp
src/backend/: GridLockAutomationRunner.cpp  GridLockAutomationRunner.hpp  TestGenerator.cpp  TestGenerator.hpp
src/core/: ConfigManager.cpp  ConfigManager.hpp  DocsetManager.cpp  DocsetManager.hpp  HpcBackend.hpp  LspCoordinator.cpp  LspCoordinator.hpp  MockHpcBackend.cpp  ShortcutManager.cpp  ShortcutManager.hpp  VariableTreeModel.cpp  VariableTreeModel.hpp  Version.cpp  Version.hpp  VersionConfig.hpp.in
src/core/commands/: DebugCommands.cpp  DebugCommands.hpp  IDebugCommand.hpp
src/core/hpc/: DapCoordinator.cpp  DapCoordinator.hpp  DeadlockAnalyzer.cpp  DeadlockAnalyzer.hpp  GdbRankCoordinator.cpp  GdbRankCoordinator.hpp  IBackendCoordinator.hpp  LspCoordinator.cpp  MemoryBoundsValidator.cpp  MemoryBoundsValidator.hpp  MemoryDiffer.cpp  MemoryDiffer.hpp  MemoryExporter.cpp  MemoryExporter.hpp  MiSanitizer.cpp  MiSanitizer.hpp  MockHpcBackend.hpp  NativeMemoryReader.cpp  NativeMemoryReader.hpp  TelemetryObfuscator.cpp  TelemetryObfuscator.hpp
src/core/managers/: ConfigManager.cpp  ConfigManager.hpp  SessionManager.cpp  SessionManager.hpp  ShortcutManager.cpp  SpackManager.cpp  SpackManager.hpp  ThemeManager.cpp  ThemeManager.hpp
src/core/models/: VariableNode.hpp  VariableTreeModel.cpp  VariableTreeModel.hpp
src/core/utils/: CliParser.cpp  CliParser.hpp
src/ui/: DifferentialGrid.cpp  DifferentialGrid.hpp  DisassemblyView.cpp  DisassemblyView.hpp  DomainHeatmapRenderer.cpp  DomainHeatmapRenderer.hpp  DomainHeatmapWidget.cpp  DomainHeatmapWidget.hpp  EditorTabManager.cpp  EditorTabManager.hpp  ExpressionEvaluatorWidget.cpp  GdbConsoleDock.cpp  GdbConsoleDock.hpp  GdbConsoleWidget.cpp  GdbConsoleWidget.hpp  MainWindow.cpp  MainWindow.hpp  MemView.cpp  PreferencesDialog.cpp  PreferencesDialog.hpp  ProjectExplorerWidget.cpp  ProjectExplorerWidget.hpp  ProjectSettingsDialog.cpp  ProjectSettingsDialog.hpp  ReferenceDock.cpp  ReferenceDock.hpp  ReferenceManualWidget.cpp  ReferenceManualWidget.hpp  RegisterView.cpp  RegisterView.hpp  ServerRackView.cpp  ServerRackView.hpp  SourceCodeView.cpp  SourceCodeView.hpp  SpackManager.cpp  SpackManager.hpp  TerminalDock.cpp  TerminalDock.hpp  ThemeManager.cpp  VariablesDockWidget.cpp  (+1 more)
src/ui/dialogs/: ConditionalBreakpointDialog.cpp  ConditionalBreakpointDialog.hpp  PreferencesDialog.cpp  PreferencesDialog.hpp  ProjectSettingsDialog.cpp  ProjectWizard.cpp  ProjectWizard.hpp  ProjectWizardDialog.cpp  ProjectWizardDialog.hpp
src/ui/docks/: DeadlockDockWidget.cpp  DeadlockDockWidget.hpp  TerminalDock.cpp  TerminalDock.hpp  TerminalDockWidget.cpp  TerminalDockWidget.hpp  VariablesDockWidget.cpp  VariablesDockWidget.hpp
src/ui/shaders/: heatmap.frag  heatmap.frag.inc  heatmap.vert  heatmap.vert.inc
src/ui/tutorial/: TutorialDialog.cpp  TutorialDialog.hpp  TutorialModel.cpp  TutorialModel.hpp  TutorialWizard.cpp  TutorialWizard.hpp
src/ui/views/: DisassemblyView.cpp  DisassemblyView.hpp  MemView.cpp  MemView.hpp  RegisterView.cpp  RegisterView.hpp  ServerRackView.cpp  ServerRackView.hpp  SourceCodeView.cpp  SourceCodeView.hpp
src/ui/widgets/: CustomTitleBar.cpp  CustomTitleBar.hpp  DifferentialGrid.cpp  DifferentialGrid.hpp  ExpressionEvaluatorWidget.hpp  FileIconProvider.cpp  FileIconProvider.hpp  HoverWidget.cpp  HoverWidget.hpp  MpiDiagnosticsWidget.cpp  MpiDiagnosticsWidget.hpp  MpiNetworkLogWidget.cpp  MpiNetworkLogWidget.hpp  (+3 more)
tests/: matrix_multiply.cpp  mpi_mm.c  test_advanced_features.cpp  test_advanced_features.hpp  test_commands.cpp  test_commands.hpp  test_config.cpp  test_config.hpp  test_config_engine.cpp  test_config_engine.hpp  test_coordinator.cpp  test_coordinator.hpp  test_dap_breakpoints.cpp  test_dap_breakpoints.hpp  test_dap_commands.cpp  test_dap_commands.hpp  test_dap_evaluate.cpp  test_dap_evaluate.hpp  test_dap_lifecycle.cpp  test_dap_lifecycle.hpp  test_dap_memory.cpp  test_dap_memory.hpp  test_dap_native_bridge.cpp  test_dap_native_bridge.hpp  test_dap_parser.cpp  test_dap_parser.hpp  test_dap_stacktrace.cpp  test_dap_stacktrace.hpp  test_dap_variables.cpp  test_dap_variables.hpp  test_docset.cpp  test_docset.hpp  test_hpc_memory.cpp  test_hpc_memory.hpp  test_lsp.cpp  test_lsp.hpp  test_memory_export.cpp  test_memory_export.hpp  test_mi_parser.cpp  test_obfuscator.cpp  (+13 more)
tests/gui/: test_tutorial_e2e.cpp
tutorial/: deadlock_demo.c  inspection_demo.cpp  memview_demo.cpp  memview_diff_demo.cpp  mpi_mm.c  register_demo.cpp  test_dap.cpp
